--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,10 @@
 default: &default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
+  adapter: mysql2
   database: ysports
-  username: postgres
-  password: postgres
+  username: root
+  password: 
   host: localhost
-  port: 5432
+  port: 3306
 
 development:
   <<: *default
